Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-08-05 Kimmo
 PATCH: [ 1534770 ] Add "don't wrap end of line" option for Find
  Src: Merge.rc resource.h
  Src/editlib: ccrystaleditview.cpp ccrystaltextview.cpp ccrystaltextview.h
   ceditreplacedlg.cpp cfindtextdlg.cpp cfindtextdlg.h
  Src/Languages/*: Merge*.rc

2006-08-03 Jan Hryz
 Czech translation - update
  Src/Languages/Czech/MergeCzech.rc

2006-08-03 WinMerge experimental release 2.5.5.5 (cvs)

2006-08-03 Kimmo
 PATCH: [ 1533457 ] Add Refresh Selected -item to Folder compare main menu
  Src: DirActions.cpp DirView.cpp DirView.h Merge.rc
  Src/Languages/*: Merge*.rc

2006-08-02 Kimmo
 PATCH: [ 1532743 ] Improve difference count columns in folder compare
  Src: DiffItem.h DiffItemList.cpp DirScan.cpp DirVierwColItems.cpp
   Merge.rc resource.h
  Src/Languages/*: Merge*.rc
 PATCH: [ 1529864 ] Stop using Application Data folders as filefilter folders
  Src: FileFilterHelper.cpp FileFilterHelper.h

2006-08-01 Kimmo
 PATCH: [ 1531845 ] Fix memory leak after find
  Src/editlib: ccrystaltextview.cpp
 PATCH: [ 1531957 ] Fix imagelist memory leak in editor
  Src/editlib: ccrystaltextview.cpp
 PATCH: [ 1430331 ] New Debug menu
  Submitted by Perry, modified by me
  Src: MainFrm.cpp MainFrm.h Merge.rc resource.h
  Src/Languages/*: Merge*.rc
 PATCH: [ 1531319 ] Tidy Folder compare progress dialog
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-07-31 Kimmo
 PATCH: [ 1531293 ] Fix wrong cursor position after find
  Src: ccrystaltextview.cpp ccrystaltextview.h cfindtextdlg.cpp
 PATCH: [ 1406051 ] code cleanup for ScriptFileActions
  Submitted by Perry
  Src: DirActions.cpp FileActionScript.cpp FileActionScript.h
 PATCH: [ 1530459 ] Add some doxygen comments for ViewableWhitespace
  Src: ViewableWhitespace.cpp ViewableWhitespace.h

2006-07-30 Takashi
 BUG: [ 1528322 ] Crash when using F6 / Bugg for file differences
  Src: MergeEditView.cpp
